// 21GIIN - Proyectos de Programación - Clase Ruta
// Proyecto: Gestión logística Portuaria
// Autores: Luis Valbuena - Benjamín Miguel

// Definimos la clase ruta Aérea

public class rutaAerea implements GestorDatos{
    // Atributos y métodos específicos de RutaAerea
    private String[] rutasVuelo;
    private double altitudVuelo;
    private String condicionesAtmosfericas;

    @Override
    public void crear() {
        // Implementación del método crear para RutaAerea
    }

    @Override
    public void modificar() {
        // Implementación del método modificar para RutaAerea
    }

    @Override
    public void eliminar() {
        // Implementación del método eliminar para RutaAerea
    }

    @Override
    public String leer() {
        // Implementación del método leer para RutaAerea
        return null; // Retorna los datos de la ruta aérea
    }

    // Otros métodos específicos de la clase RutaAerea
}
