// 21GIIN - Proyectos de Programación - Clase Ruta
// Proyecto: Gestión logística Portuaria
// Autores: Luis Valbuena - Benjamín Miguel

// Definimos la clase ruta Marítima

public class rutaMaritima implements GestorDatos{
    // Atributos y métodos específicos de RutaMaritima

    private double profundidadAgua;
    private String condicionesMar;
    private String[] puertosIntermedios;


    @Override
    public void crear() {
        // Implementación del método crear para RutaMaritima
    }

    @Override
    public void modificar() {
        // Implementación del método modificar para RutaMaritima
    }

    @Override
    public void eliminar() {
        // Implementación del método eliminar para RutaMaritima
    }

    @Override
    public String leer() {
        // Implementación del método leer para Ruta
        return null; // Retorna los datos de la ruta
    }

    // Otros métodos específicos de la clase RutaMaritima
}
   
}
