// 21GIIN - Proyectos de Programación - Clase Ruta
// Proyecto: Gestión logística Portuaria
// Autores: Luis Valbuena - Benjamín Miguel

// Definimos la clase ruta Terrestre
public class rutaTerrestre extends Ruta implements GestorDatos{
    // Atributos clase RutaTerrestre
    private String tipoTerreno;
    private int numeroPeajes;
    private String estadoCarreteras;

    @Override
    public void crear() {
        // Implementación del método crear para RutaTerrestre
    }

    @Override
    public void modificar() {
        // Implementación del método modificar para RutaTerrestre
    }

    @Override
    public void eliminar() {
        // Implementación del método eliminar para RutaTerrestre
    }

    @Override
    public String leer() {
        // Implementación del método leer para RutaTerrestre
        return null; // Retorna los datos de la ruta terrestre
    }

    // Otros métodos específicos de la clase RutaTerrestre
}

