@startuml DiagramaDeClases


class Usuario implements GestorDatos{
    - id: int
    - nombre: String
    - clave: String
    - tipoUsuario: String
    - telefono: String
    - email: String
    
    + crear(): void
    + leer(): String
    + actualizar(): void
    + eliminar(): void
    
}



class Operacion implements GestorDatos{
    
    - id_operacion: int    
    
    + crear(): void
    + leer(): String
    + actualizar(): void
    + eliminar(): void
}

class Ruta {
    - id_ruta: int
    - tipoRuta: String
    - puertoOrigen: String
    - puertoDestino: String
    - fechaSalida: date
    - fechaLlegada: date
    - costeRuta: int
    
    + agregarTrayecto(): String()

    
}



class RutaTerrestre extends Ruta implements GestorDatos{
    - tipoTerreno: String
    - numeroPeajes: int
    - estadoCarreteras: String
    
    + crear(): void
    + leer(): String
    + actualizar(): void
    + eliminar(): void
  
}

class RutaMaritima extends Ruta implements GestorDatos{
    - profundidadAgua: double
    - condicionesMar: String
    - puertosIntermedios: String[]
    
    + crear(): void
    + leer(): String
    + actualizar(): void
    + eliminar(): void
    
}

class RutaAerea extends Ruta implements GestorDatos{
    - rutasVuelo: String[]
    - altitudVuelo: double
    - condicionesAtmosfericas: String
    
    + crear(): void
    + leer(): String
    + actualizar(): void
    + eliminar(): void
    
}

class Empaquetado implements GestorDatos{
    - numeroContenedores: int
    - peso: double
    - tamano: double
    
    + crear(): void
    + leer(): String
    + actualizar(): void
    + eliminar(): void
    
}

class Facturacion implements GestorDatos{
    - codigo: String
    - fecha: String
    - hora: String
    - tipo: String
    - matricula: String
    - nombre: String
    - dni: String
    - concepto: String
    - importe: double
    - estado: String
    
    + crear(): void
    + leer(): String
    + actualizar(): void
    + eliminar(): void
    
}

interface GestorDatos {
    + crear(): void
    + leer(): String
    + actualizar(): void
    + eliminar(): void
}





Usuario --|> Operacion
Operacion <|-- Ruta
Operacion <|-- Empaquetado
Operacion <|-- Facturacion



@enduml